adding keyspace listing to explorer
git-svn-id: https://svn.wso2.org/repos/wso2/carbon/platform/trunk@128971 a5903396-d722-0410-b921-86c7d4935375